RESOLVED FIXED155046
Begin implementing <attachment> painting on iOS
https://bugs.webkit.org/show_bug.cgi?id=155046
Summary Begin implementing <attachment> painting on iOS
Tim Horton
Reported 2016-03-04 14:26:00 PST
Begin implementing <attachment> painting on iOS
Attachments
Patch (16.81 KB, patch)
2016-03-04 14:26 PST, Tim Horton
enrica: review+
Tim Horton
Comment 1 2016-03-04 14:26:29 PST
WebKit Commit Bot
Comment 2 2016-03-04 14:28:44 PST
Attachment 273042 [details] did not pass style-queue: ERROR: Source/WebCore/rendering/RenderThemeIOS.h:115: "virtual" is redundant since function is already declared as "override" [readability/inheritance] [4] ERROR: Source/WebCore/rendering/RenderThemeIOS.h:116: "virtual" is redundant since function is already declared as "override" [readability/inheritance] [4] ERROR: Source/WebCore/rendering/RenderThemeIOS.h:117: "virtual" is redundant since function is already declared as "override" [readability/inheritance] [4] Total errors found: 3 in 3 files If any of these errors are false positives, please file a bug against check-webkit-style.
Tim Horton
Comment 3 2016-03-04 16:57:22 PST
Tim Horton
Comment 5 2016-03-04 23:21:43 PST
(In reply to comment #4) > Could you please fix the tests? > > https://build.webkit.org/results/ > Apple%20iOS%209%20Simulator%20Release%20WK2%20(Tests)/r197608%20(3666)/ > results.html Oh, weird! As I noted in the ChangeLog, I thought they were skipped. Maybe I had the directory name wrong. Will fix!
Tim Horton
Comment 6 2016-03-04 23:31:47 PST
Temporarily skipped in 197610. Next week there will be another <attachment> patch that completes the implementation and turns the tests back on. Also, are ref tests upside-down?! :D
Note You need to log in before you can comment on or make changes to this bug.